--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container-fluid mt-2">
         <div class="row">
           <div class="col-xl-8">
-           <img class="rounded img-fluid" id="myImg" src="img/project3.png" alt="Registration Form"  onclick="myFunction(this);">
+           <img class="rounded img-fluid" id="myImg" src="img/project3.png" alt="Registration Form"  title="Click Here" onclick="myFunction(this);">
         </div>
         <div class="col-xl-4 pro">
             <h1>Registration FORM</h1>
@@ -73,7 +73,7 @@
             <div><a href="https://github.com/Tabbu-Khanam/project4">view code</a></div>
       </div>
       <div class="col-xl-8">
-        <img class="rounded img-fluid" src="img/project4.png" alt="Web Style Guide"  onclick="myFunction(this);">
+        <img class="rounded img-fluid" src="img/project4.png" alt="Web Style Guide" title="Click Here"  onclick="myFunction(this);">
      </div>
     </div>
   </div>
@@ -81,7 +81,7 @@
   <div class="container-fluid mt-2">
     <div class="row">
       <div class="col-xl-8">
-       <img class="rounded img-fluid" src="img/project5.png" alt="Interactive Photo Gallery" onclick="myFunction(this);">
+       <img class="rounded img-fluid" src="img/project5.png" alt="Interactive Photo Gallery" title="Click Here"  onclick="myFunction(this);">
     </div>
     <div class="col-xl-4 pro">
         <h1>Interactive Photo Gallery</h1>
@@ -102,7 +102,7 @@
     <div><a href="https://github.com/Tabbu-Khanam/techdegree-project7">view code</a></div>
   </div>
   <div class="col-xl-8">
-    <img class="rounded img-fluid" src="img/project6.png" alt="WebApp Dashboard" onclick="myFunction(this);">
+    <img class="rounded img-fluid" src="img/project6.png" alt="WebApp Dashboard" title="Click Here"  onclick="myFunction(this);">
  </div>
 </div>
 </div>
@@ -111,7 +111,7 @@
 <div class="container-fluid mt-2">
   <div class="row">
     <div class="col-xl-8">
-      <img class="rounded img-fluid" src="img/project7.png" alt="Employee Directory-API"  onclick="myFunction(this);">
+      <img class="rounded img-fluid" src="img/project7.png" alt="Employee Directory-API" title="Click Here"  onclick="myFunction(this);">
    </div>
   <div class="col-xl-4 pro">
       <h1>Employee Directory-API</h1>
@@ -132,7 +132,7 @@
       <div><a href="https://github.com/Tabbu-Khanam/css-style">view code</a></div>
   </div>
   <div class="col-xl-8">
-    <img class="rounded img-fluid" src="img/w3schools.png" alt="W3schools Website"  onclick="myFunction(this);">
+    <img class="rounded img-fluid" src="img/w3schools.png" alt="W3schools Website" title="Click Here"  onclick="myFunction(this);">
  </div>
 </div>
 </div>
@@ -167,7 +167,7 @@
        Phone<br>
         7501888922
         socail<br>
-        <a href="tabbukhan78612@gmail.com"><img src="img/github.png" alt="github.icon" class="github"></a>
+        <a href="https://github.com/tabbu-khanam"><img src="img/github.svg" alt="github.icon" class="github"></a>
      </address>
   </div>
 </footer>
