--- a/index.html
+++ b/index.html
@@ -123,19 +123,6 @@
 </div>
 </div>
 <hr>
-<div class="container-fluid mt-2">
-  <div class="row">
-  <div class="col-xl-4 pro">
-      <h1>W3schools Website</h1>
-      <p>W3Schools has focus on simplicity.W3Scchools practice easy learning.W3Schools uses simple code examples and simple illustrations of how to use it.W3Schools' tutorials start from basic level and move all the way up to professional references.I learned so many things from that Website so far...then I designed that webpage by myself...</p>
-      <div><a href="https://tabbu-khanam.github.io/style.github.io/">visit site</a></div>
-      <div><a href="https://github.com/Tabbu-Khanam/css-style">view code</a></div>
-  </div>
-  <div class="col-xl-8">
-    <img class="rounded img-fluid" src="img/w3schools.png" alt="W3schools Website" title="Click Here"  onclick="myFunction(this);">
- </div>
-</div>
-</div>
 </div>
 <div class="mode" id="myMode">
 <span class="close">&times;</span>
@@ -155,7 +142,8 @@
     <label for="message" class="message">Message</label>
     <textarea id="message" name="message" cols="20" rows="8" placeholder="Message for user"></textarea>
     <br>
-    <button type="button" id="send">SEND</button>
+    <button type="button" id="send" class="butn">SEND</button>
+    <button type="button" id="clear" class="butn">Clear</button>
   </form>
 </div>
   <div class="right">
