--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <nav>
         <ul>
-         <li><a href="#">Tabbu's Portfolio</a></li>
+        
         <li><a href="#about"><i class="material-icons icon">person</i>About me</a></li>
               <li><a href="#project"><i class="material-icons icon">folder</i>Project</a></li>
               <li><a href="#contact"><i class="material-icons icon">contact_phone</i>Contact</a></li>
@@ -154,7 +154,7 @@
        tabbukhan78612@gmail.com<br>
        Phone<br>
         7501888922
-        socail<br>
+        social<br>
         <a href="https://github.com/tabbu-khanam"><img src="img/github.svg" alt="github.icon" class="github"></a>
      </address>
   </div>
